sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                   return n}
                          ^BasicPancake:13: warning: enclosing method selectcible has result type Unit: return value discarded
                   return n}
                   ^BasicPancake:19: error: type mismatch;
 found   : Unit
 required: Int
def solve() {while (!estTriee) {tmt=getRayonCrepe(0); ct=selectcible(); retourne(ct);retourne(t-estT);estT=estT+1}} 
                                                                    ^